Add modular word count strategies (split, regex, legal, nlp)

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ DATA_DIR=data
 # Directory for storing flattened agency lists, metrics (word count, density score, etc.)
 ARCHIVE_DIR=archive
 
+# Word count strategy (Options: split, regex, legal, nlp)
+WORDCOUNT_METHOD=split
