Minor updates to bootstrap script to support WORDCOUNT constant

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,11 @@
 # Snapshot date to download/process eCFR data for
 SNAPSHOT_DATE=2025-03-27
 
-# Directory where raw XML data will be downloaded
-DATA_DIR=data
+# Word count strategy (Options: split, regex, legal, nlp)
+WORDCOUNT_METHOD=regex
 
 # Directory for storing flattened agency lists, metrics (word count, density score, etc.)
 ARCHIVE_DIR=archive
 
-# Word count strategy (Options: split, regex, legal, nlp)
-WORDCOUNT_METHOD=split
+# Directory where raw XML data will be downloaded
+DATA_DIR=data
