Enhance bootstrap to auto-create PYTHONPATH in .env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Configuration for DOGE Data Challenge
 # Copy this file to .env and edit as needed
 
+# Set Python module resolution to the project root
+PYTHONPATH=.
+
 # Snapshot date to download/process eCFR data for
 SNAPSHOT_DATE=2025-03-27
 
