Update key text, config, git, and script files in project root to handle helpers package

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
 # Configuration for DOGE Data Challenge
-# Copy this file to .env and edit as needed
+# Copy to .env and configure for your environment
 
-# Set Python module resolution to the project root
-PYTHONPATH=.
-
-# Snapshot date to download/process eCFR data for
+# Date of the regulation snapshot (format: YYYY-MM-DD)
 SNAPSHOT_DATE=2025-03-27
 
-# Word count strategy (Options: split, regex, legal, nlp)
+# Word count strategy (options: split, regex, legal, nlp)
 WORDCOUNT_METHOD=regex
 
-# Directory for storing flattened agency lists, metrics (word count, density score, etc.)
+# Directory for metadata storage
 ARCHIVE_DIR=archive
 
-# Directory where raw XML data will be downloaded
+# Directory for regulation XMLs
 DATA_DIR=data
