--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "doge_data_challenge"}]
 python = ">=3.10"
 python-dotenv = ">=1.1.0,<2.0.0"
 jupyter = ">=1.1.1,<2.0.0"
+pandas = "^2.2.3"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
